# Jaculus-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions-8m.csv  sdkconfig-esp32  sdkconfig-esp32c3  sdkconfig-esp32s3  sdkconfig-esp32s3-devkitc-n8  sdkconfig.defaults-esp32  sdkconfig.defaults-esp32c3  sdkconfig.defaults-esp32s3  sdkconfig.defaults-esp32s3-quad  uploadspiffs.bat
.github/workflows/: esp-idf.yaml
components/SmartLeds/: CMakeLists.txt
components/SmartLeds/src/: SmartLeds.h
data/: blink.js  button.js  gomoku.js  index.js  main.js
data/code/: index.js
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  idf_component.yml  main.cpp  serialStream.h
main/espFeatures/: adcFeature.h  analogFeature.h  digitalFeature.h  extendLifetimeFeature.h  freeRTOSEventQueue.h  gpioFeature.h  httpClientFeature.h  i2cFeature.h  ledcFeature.h  motorFeature.h  neopixelFeature.h  pulseCounterFeature.h  pwmFeature.h  simpleRadioFeature.h  smartLedFeature.h  timestampFeature.h  wdtResetFeature.h  wifiFeature.h
main/espFeatures/gridui/: gridUiFeature.cpp  gridUiFeature.h
main/espFeatures/gridui/builder/: arm.h  bar.h  button.h  camera.h  checkbox.h  circle.h  input.h  joystick.h  led.h  orientation.h  select.h  slider.h  spinedit.h  switcher.h  text.h
main/espFeatures/gridui/widgets/: _common.cpp  _common.h  arm.h  bar.h  base.h  button.h  camera.h  checkbox.h  circle.h  input.h  joystick.h  led.h  orientation.h  select.h  slider.h  spinedit.h  switcher.h  text.h
main/features/: adcFeature.h  freeRTOSEventQueue.h  gpioFeature.h  ledcFeature.h  linkIoFeature.h  neopixelFeature.h
main/platform/: esp32.h  esp32c3.h  esp32s3.h  espCommon.h  espNvsKeyValue.cpp  espNvsKeyValue.h  espWifi.cpp  espWifi.h
main/resources/: CMakeLists.txt  resources.cmake  resources.cpp.in  resources.h
main/util/: bleStream.cpp  bleStream.h  controller.h  jtagStream.h  lock.h  logger.cpp  logger.h  serialStream.h  tcpStream.h  timeout.h  uartStream.h  uploader.cpp  uploader.h
scripts/: build-esp32-c3-devkitc.sh  build-esp32-c3-generic.sh  build-esp32-devkitc.sh  build-esp32-generic.sh  build-esp32-s3-devkitc.sh  build-esp32-s3-generic-quad.sh  build-esp32-s3-generic.sh  export-package.sh
ts-examples/: README.md
ts-examples/@types/: analog.d.ts  digital.d.ts  gpio.d.ts  gridui.d.ts  httpClient.d.ts  i2c.d.ts  ledc.d.ts  path.d.ts  pwm.d.ts  simpleradio.d.ts  smartled.d.ts  timers.d.ts  wifi.d.ts
ts-examples/src/: adc.ts  blink.ts  blinksmart.ts  button.ts  echo.ts  encoder.ts  filesystem.ts  gomoku.ts  httpClient-example.ts  httpClientDemo.ts  httpClientDemoAsync.ts  index.ts  ledc.ts  motor.ts  piezo.ts  pwm.ts  radioblink.ts  radioecho.ts  readline.ts  repl.ts  servo.ts  snake.ts
